--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -1,8 +1,7 @@
 {
   "home": {
-    "introduction": "Bienvenu sur {{appTitle}}!",
-    "subtitle": "Rédigez vos compte rendus en quelques clics !",
-    "featuredTemplates" : "Modèles recommandés",
-    "connect" : "Se connecter"
+    "introduction": "Bienvenue sur {{appTitle}}!",
+    "presentation": "9 Tonnes de nourriture sont gâchées chaque année en France. Fight Food Waste est une organisation à but non lucratif visant à réduire ce chiffre alarmant. Nous faisons en sorte que les produits en phase d'expiration soient donnés à des particuliers ou à d'autres associations. Tout le monde peut donner ses produits: il suffit d'entrer ses coordonnées et soumettre ses produits à notre application et nous irons les récupérer chez vous pour vous. Aidez-nous à combattre le gâchis de nourriture!",
+    "manage": "Gérer"
   }
 }
