added settings view

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -12,5 +12,11 @@
     "settings": "Settings",
     "login": "Login",
     "logout": "Logout"
+  },
+  "settings": {
+    "setOptions": "Configure application options",
+    "language": "Display language",
+    "dateFormat": "Date Format",
+    "save": "Save"
   }
 }
