--- a/src/locales/en/translation.yml
+++ b/src/locales/en/translation.yml
@@ -19,6 +19,7 @@ articles:
   brands: Brands
   productName: Product Name
   labels: Labels
+  createCategories: + Create Category
   categories: Categories
   validate: Validate
   reject: Reject
@@ -28,4 +29,4 @@ category:
   title: Create new category
   name: name
   maxAmount: maximum storage
-  save: Save
+  save: Add
