began implementinh arrow list

--- a/src/locales/en/translation.yml
+++ b/src/locales/en/translation.yml
@@ -42,3 +42,5 @@ errors:
   nan: must be a valid integer!
   minLength: is too short!
   maxLength: is too long!
+gathering:
+  createGathering: + Create Gathering
