finished gathering view

--- a/src/locales/en/translation.yml
+++ b/src/locales/en/translation.yml
@@ -44,3 +44,6 @@ errors:
   maxLength: is too long!
 gathering:
   createGathering: + Create Gathering
+  storage: Storage
+  gathering: Gathering
+  save: Validate Gathering
