internationalized error interceptor

--- a/src/locales/en/translation.yml
+++ b/src/locales/en/translation.yml
@@ -47,3 +47,6 @@ gathering:
   storage: Storage
   gathering: Gathering
   save: Validate Gathering
+error:
+  title: Error
+  defaultMessage: A communication error has occured.
