fixed similar issue in gathering

--- a/src/locales/en/translation.yml
+++ b/src/locales/en/translation.yml
@@ -48,6 +48,7 @@ gathering:
   storage: Storage
   gathering: Gathering
   save: Validate Gathering
+  nocollecte: Please select a valid gathering and a storage address!
 error:
   title: Error
   defaultMessage: A communication error has occured.
