--- a/src/locales/fr/translation.yml
+++ b/src/locales/fr/translation.yml
@@ -49,6 +49,8 @@ gathering:
   gathering: Collecte
   save: Valider Collecte
   nocollecte: Veuillez sélectionner une collecte et une adresse de stockage valide !
+  affected: Articles affectés
+  available: Articles disponibles
 error:
   title: Erreur
   defaultMessage: Une erreur de communication s'est produite.
