--- a/src/locales/en/translation.yml
+++ b/src/locales/en/translation.yml
@@ -6,6 +6,7 @@ routes:
   settings: Settings
   create-gathering: Create Gathering
   stock: Stock
+  article: Article
 home:
   introduction: Welcome to {{appTitle}}!
   presentation: '20 Billions of Pounds of food are wasted every year in France. Fight Food Waste is a non-profit organization aiming to reduce this alarming number. We ensure that nearly expired products are donated to private individuals or other organizations. Everyone can donate products for free: you just need to enter your contact details and submit your products to our application and we will fetch them for you at your home. Help us fight food waste!'
@@ -30,6 +31,7 @@ articles:
   productName: Product Name
   labels: Labels
   createCategories: + Create Category
+  ingredients: Ingredients
   categories: Categories
   validate: Validate
   reject: Reject
