added delivery route

--- a/src/locales/en/translation.yml
+++ b/src/locales/en/translation.yml
@@ -7,6 +7,7 @@ routes:
   create-gathering: Create Gathering
   stock: Stock
   article: Article
+  delivery: Delivery
 home:
   introduction: Welcome to {{appTitle}}!
   presentation: '20 Billions of Pounds of food are wasted every year in France. Fight Food Waste is a non-profit organization aiming to reduce this alarming number. We ensure that nearly expired products are donated to private individuals or other organizations. Everyone can donate products for free: you just need to enter your contact details and submit your products to our application and we will fetch them for you at your home. Help us fight food waste!'
@@ -16,6 +17,7 @@ breadcrumb:
   pending-articles: Pending Articles
   gathering: Gathering
   stock: Stock
+  delivery: Delivery
 header:
   settings: Settings
   login: Login
