--- a/src/locales/fr/translation.yml
+++ b/src/locales/fr/translation.yml
@@ -7,6 +7,7 @@ routes:
   create-gathering: Créer Collecte
   stock: Stock
   article: Article
+  delivery: Livraison
 home:
   introduction: Bienvenue sur {{appTitle}} !
   presentation: "9 Tonnes de nourriture sont gâchées chaque année en France. Fight Food Waste est une organisation à but non lucratif visant à réduire ce chiffre alarmant. Nous faisons en sorte que les produits en phase d'expiration soient donnés à des particuliers ou à d'autres associations. Tout le monde peut donner ses produits: il suffit d'entrer ses coordonnées et soumettre ses produits à notre application et nous irons les récupérer chez vous pour vous. Aidez-nous à combattre le gâchis de nourriture !"
@@ -16,6 +17,7 @@ breadcrumb:
   pending-articles: Articles en attente
   gathering: Collecte
   stock: Stock
+  delivery: Livraison
 header:
   settings: Paramètres
   login: Connexion
