--- a/src/locales/fr/translation.yml
+++ b/src/locales/fr/translation.yml
@@ -8,6 +8,7 @@ routes:
   stock: Stock
   article: Article
   delivery: Livraison
+  create-delivery: Créer Livraison
 home:
   introduction: Bienvenue sur {{appTitle}} !
   presentation: "9 Tonnes de nourriture sont gâchées chaque année en France. Fight Food Waste est une organisation à but non lucratif visant à réduire ce chiffre alarmant. Nous faisons en sorte que les produits en phase d'expiration soient donnés à des particuliers ou à d'autres associations. Tout le monde peut donner ses produits: il suffit d'entrer ses coordonnées et soumettre ses produits à notre application et nous irons les récupérer chez vous pour vous. Aidez-nous à combattre le gâchis de nourriture !"
@@ -58,8 +59,21 @@ gathering:
   nocollecte: Veuillez sélectionner une collecte et une adresse de stockage valide !
   affected: Articles affectés
   available: Articles disponibles
+delivery:
+  createDelivery: + Créer Livraison
+  storage: Stockage
+  delivery: Livraison
+  save: Valider Livraison
+  nocollecte: Veuillez sélectionner une livraison et une adresse de stockage valide !
+  affected: Articles affectés
+  available: Articles disponibles
 create-gathering:
   title: Créer une nouvelle collecte
+  name: Nom
+  transporter: Transporteur
+  save: Ajouter
+create-delivery:
+  title: Créer une nouvelle Livraison
   name: Nom
   transporter: Transporteur
   save: Ajouter
