--- a/src/locales/en/translation.yml
+++ b/src/locales/en/translation.yml
@@ -66,7 +66,7 @@ delivery:
   storage: Storage
   delivery: Delivery
   save: Validate Delivery
-  nocollecte: Please select a valid delivery and a storage address!
+  nodelivery: Please select a valid delivery!
   affected: Affected articles
   available: Available articles
 create-gathering:
