added custome home routing

--- a/src/locales/en/translation.yml
+++ b/src/locales/en/translation.yml
@@ -9,11 +9,12 @@ routes:
   article: Article
   delivery: Delivery
   create-delivery: Create Delivery
-  shop: Stock
+  shop: Shop
+  infos: Informations
 home:
   introduction: Welcome to {{appTitle}}!
   presentation: '20 Billions of Pounds of food are wasted every year in France. Fight Food Waste is a non-profit organization aiming to reduce this alarming number. We ensure that nearly expired products are donated to private individuals or other organizations. Everyone can donate products for free: you just need to enter your contact details and submit your products to our application and we will fetch them for you at your home. Help us fight food waste!'
-  manage: Manage
+  manage: Start
 breadcrumb:
   home: Home
   pending-articles: Pending Articles
@@ -81,6 +82,15 @@ create-delivery:
   transporter: Transporter
   save: Add
   cancel: Cancel
+informations:
+  title: Informations
+  name: Name
+  lastname: Last Name
+  type: Type
+  address: Address
+  zipcode: Zip Code
+  phone: Phone Number
+  save: Validate
 error:
   title: Error
   defaultMessage: A communication error has occured.
